# type_index

./: .gitignore  CMakeLists.txt  build.jam  index.html
.drone/: drone.sh
.github/workflows/: ci.yml
doc/: Jamfile.v2  type_index.qbk
examples/: demangled_names.cpp  exact_types_match.cpp  inheritance.cpp  registry.cpp  runtime_cast.cpp  table_of_names.cpp  user_defined_typeinfo.cpp  user_defined_typeinfo.hpp
include/boost/: type_index.hpp
include/boost/type_index/: ctti_type_index.hpp  stl_type_index.hpp  type_index_facade.hpp
include/boost/type_index/detail/: compile_time_type_info.hpp
include/boost/type_index/runtime_cast/: boost_shared_ptr_cast.hpp  reference_cast.hpp  register_runtime_class.hpp  std_shared_ptr_cast.hpp
include/boost/type_index/runtime_cast/detail/: runtime_cast_impl.hpp
modules/: boost_type_index.cppm
test/: CMakeLists.txt  Jamfile.v2  compare_ctti_stl.cpp  ctti_print_name.cpp  testing_crossmodule.cpp  track_13621.cpp  type_index_constexpr_test.cpp  type_index_runtime_cast_test.cpp  type_index_test.cpp  type_index_test_ctti_alignment.cpp
test/cmake_subdir_test/: CMakeLists.txt
